--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,12 @@
 spring.application.name=dbdemo
 
-spring.datasource.url = jdbc:mysql://database-1.c5kwyes0e2dk.ap-south-1.rds.amazonaws.com:3306/firstschema
-#spring.datasource.url = jdbc:mysql://localhost:3306/awsschema
-spring.datasource.username=admin
-spring.datasource.password=admin8016
+spring.datasource.url=jdbc:mysql://localhost:3306/firstschema
+spring.datasource.username=root
+spring.datasource.password=123456789
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
-logging.level.org.hibernate.SQL=DEBUG
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-
-#spring.jpa.hibernate.ddl-auto=create
-
-
-#This one is for the spring security userName and password
-#spring.security.user.name=man
-#spring.security.user.password=man
+spring.jpa.properties.hibernate.format_sql=true
+jpa.properties.hibernate.hbm2ddl.auto = update
+spring.jpa.hibernate.ddl-auto=update
